<resources>
    <string name="app_name">Natural Corner</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_your_natural_corner_account">Create your Natural Corner account</string>
    <string name="continue_without_signing_in">Continue without signing in</string>
    <string name="title_activity_create_new_accout">Create A New Natural Corner Account</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="receive_notification">Receive notification</string>
    <string name="geolocalization_awareness">Geolocalization awareness</string>
    <string name="disable_notifications">disable notifications</string>

    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">cose drawer</string>
    <string name="sort_a_z">Sort A/Z ↑/↓</string>
    <string name="sort_by_price">Sort by Price ↑/↓</string>
    <string name="to_your_basket">To your Basket</string>
    <string name="natural_corner">natural corner</string>
    <string name="your_basket">Your Basket</string>
    <string name="register">REGISTER</string>
    <string name="your_email">Your Email :</string>
    <string name="your_name">Your Name :</string>
    <string name="denomination">Name</string>
    <string name="price">Price</string>
    <string name="denomination_2">Name</string>
    <string name="commentaire_2">Comments</string>
    <string name="price_2">Price</string>
    <string name="added_to_basket">Added to your Basket</string>
    <string name="not_added_to_basket">Not Added to your Basket</string>
    <string name="incorrect_email">INCORRECT EMAIL AND/OR PASSWORD</string>
    <string name="not_getting_anything">Not getting anything from the remote server</string>
    <string name="incorrect_pwd">Incorrect password</string>
    <string name="no_connexion">No connexion to the remote server</string>
    <string name="total">"TOTAL : "</string>
    <string name="euro">" €"</string>
    <string name="nc_title">Natural Corner</string>
    <string name="by_cat">By Category</string>
    <string name="proximity_nc">You Are Close To NATURAL CORNER</string>
    <string name="all">All</string>
    <string name="category">CATEGORIES</string>
    <string name="not_disabled">Notifications disabled (fake)</string>
    <string name="nothing">Nothing</string>
    <string name="order">ORDER</string>

</resources>
