<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_id"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@android:color/holo_green_light">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:id="@+id/imageViewArticle"
        android:src="@drawable/fruits_display"
        android:adjustViewBounds="false"
        android:paddingTop="?attr/actionBarSize"
        android:background="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/denomination_2"
        android:id="@+id/textViewDenomination"
        android:padding="16dp"
        android:layout_below="@+id/imageViewArticle"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewDenomination"
        android:layout_alignParentStart="true"
        android:layout_marginTop="64dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/commentaire_2"
            android:id="@+id/textViewCommentaire"
            android:padding="16dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewBlank"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_add_shopping_cart_black_24dp"
        android:id="@+id/buttonAdd"
        android:layout_gravity="center"
        android:padding="5dp"
        android:background="@android:color/holo_green_dark"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_alignTop="@+id/linearLayout2"
        android:layout_toStartOf="@+id/textViewPrice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/price_2"
        android:id="@+id/textViewPrice"
        android:layout_gravity="right"
        android:padding="6dp"
        android:paddingBottom="0dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textViewDenomination"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_above="@+id/buttonAdd" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewDenomination"
        android:layout_margin="16dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/buttonMinusItem"
            android:layout_alignBottom="@+id/buttonAddItem"
            android:layout_toStartOf="@+id/editTextSetNbArticle"
            android:background="@android:color/holo_green_dark" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextSetNbArticle"
            android:numeric="integer"
            android:padding="16dp"
            android:layout_below="@+id/imageView2"
            android:layout_toStartOf="@+id/buttonAddItem"
            android:text="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/buttonAddItem"
            android:layout_below="@+id/imageView2"
            android:layout_toStartOf="@+id/buttonAdd"
            android:background="@android:color/holo_green_dark" />

    </LinearLayout>

</RelativeLayout>